--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <div class="container">
         <div class="row">
             <div class="col-md-12">
-              <p>Desenvolvido por <a href="https://lswebdesigner.com/" target="_blank">Lucas Soares</a> &copy; 2024</p>
+              <p>Desenvolvido por Lucas Soares</a> &copy; 2024</p>
             </div>
         </div>
       </div>
