--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
             <div class="col-md-12">
               <p>Desenvolvido por Lucas Soares</a> &copy; 2024</p>
             </div>
+            <div class="icons">
+              <a href="https://api.whatsapp.com/send?phone=5511981077083&text=Ol%C3%A1%20em%20que%20posso%20ajudar" target="_blank"><i class="bi bi-whatsapp btn"></i></a>
+              <a href="https://www.instagram.com/lucass17071996?igsh=OTl0bDZ2dTAxMGdm" target="_blank"><i class="bi bi-instagram btn"></i></a>
+              <a href="https://www.linkedin.com/in/lucas-santos-soares/" target="_blank"><i class="bi bi-linkedin btn"></i></a>
+             </div>
         </div>
       </div>
     </div>
