--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Quer criar um e-commerce?</h5>
                 <p>Conte conosco, temos mais de 30 lojas no portfólio.</p>
-                <a href="portfolio-menu" class="main-btn">Ver portfólio</a>
+                <a href="#portfolio-menu" class="main-btn">Ver portfólio</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -90,7 +90,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Está querendo tirar o projeto do papel?</h5>
                 <p>Nossa equipe de engenharia de software está pronta para lhe atender.</p>
-                <a href="contact-menu" class="main-btn">Entre em contato</a>
+                <a href="#contact-menu" class="main-btn">Entre em contato</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -98,7 +98,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Está buscando manutenção no seu software?</h5>
                 <p>A hDC conta com engenheiros altamente qualificados para resolver seu problema.</p>
-                <a href="contact-menu" class="main-btn">Entre em contato</a>
+                <a href="#contact-menu" class="main-btn">Entre em contato</a>
             </div>
           </div>
         </div>
