--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <span class="icon"><i class="bi bi-people"></i></span>
             </a>
             <a class="nav-item nav-link" id="portfolio-menu" href="#">Projetos
-              <span class="icon"><i class="bi bi-camera"></i></span>
+              <span class="icon"><i class="bi bi-layers"></i></span>
             </a>
             <a class="nav-item nav-link" id="contact-menu" href="#">Contato
               <span class="icon"><i class="bi bi-phone"></i></span>
