--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,6 +112,8 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+      <!--accordion-->
+      
       <!-- Sobre a empresa -->
       <div id="about-area">
         <div class="container">
@@ -170,7 +173,8 @@
             <div class="col-md-4 service-box">
               <i class="fas fa-hands-helping"></i>
               <h4>Suporte 24/7</h4>
-              <p>Você sempre terá alguem da equipe disponível para suporte, em diferentes plataformas. (chat, email,skype)</p>
+              <p>Você sempre terá alguem da equipe disponível para suporte, em diferentes plataformas. (chat,
+                email,skype)</p>
             </div>
             <div class="col-md-4 service-box">
               <i class="fas fa-server"></i>
@@ -331,52 +335,56 @@
   <footer>
     <div id="contact-area">
       <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="main-title">Entre em contato conosco</h3>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="fas fa-phone"></i>
-              <p><span class="contact-title">Ligue para:</span> (48)99999-9999</p>
-              <p><span class="contact-title">Horários:</span> 8:00 - 19:00</p>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="fas fa-envelope"></i>
-              <p><span class="contact-title">Envie um email:</span> contato@hdcagency.com.br</p>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="fas fa-map-marker-alt"></i>
-              <p><span class="contact-title">Venha tomar um café:</span> Rua Lorem Ipsum - 1314</p>
-            </div>
-            <div class="col-md-6" id="msg-box">
-              <p>Ou nos deixe uma mensagem:</p>
-            </div>
-            <div class="col-md-6" id="contact-form">
-              <form action="">
-                <input type="text" class="form-control" placeholder="E-mail" name="email">
-                <input type="text" class="form-control" placeholder="Assunto" name="subject">
-                <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message"></textarea>
-                <input type="submit" class="main-btn">
-              </form>
-            </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="main-title">Entre em contato conosco</h3>
           </div>
+          <div class="col-md-4 contact-box">
+            <i class="fas fa-phone"></i>
+            <p><span class="contact-title">Ligue para:</span> (48)99999-9999</p>
+            <p><span class="contact-title">Horários:</span> 8:00 - 19:00</p>
+          </div>
+          <div class="col-md-4 contact-box">
+            <i class="fas fa-envelope"></i>
+            <p><span class="contact-title">Envie um email:</span> contato@hdcagency.com.br</p>
+          </div>
+          <div class="col-md-4 contact-box">
+            <i class="fas fa-map-marker-alt"></i>
+            <p><span class="contact-title">Venha tomar um café:</span> Rua Lorem Ipsum - 1314</p>
+          </div>
+          <div class="col-md-6" id="msg-box">
+            <p>Ou nos deixe uma mensagem:</p>
+          </div>
+          <div class="col-md-6" id="contact-form">
+            <form action="">
+              <input type="text" class="form-control" placeholder="E-mail" name="email">
+              <input type="text" class="form-control" placeholder="Assunto" name="subject">
+              <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message"></textarea>
+              <input type="submit" class="main-btn">
+            </form>
+          </div>
+        </div>
       </div>
     </div>
     <div id="copy-area">
       <div class="container">
         <div class="row">
-            <div class="col-md-12">
-              <p>Desenvolvido por Lucas Soares</a> &copy; 2024</p>
-            </div>
-            <div class="icons">
-              <a href="https://api.whatsapp.com/send?phone=5511981077083&text=Ol%C3%A1%20em%20que%20posso%20ajudar" target="_blank"><i class="bi bi-whatsapp btn"></i></a>
-              <a href="https://www.instagram.com/lucass17071996?igsh=OTl0bDZ2dTAxMGdm" target="_blank"><i class="bi bi-instagram btn"></i></a>
-              <a href="https://www.linkedin.com/in/lucas-santos-soares/" target="_blank"><i class="bi bi-linkedin btn"></i></a>
-             </div>
+          <div class="col-md-12">
+            <p>Desenvolvido por Lucas Soares</a> &copy; 2024</p>
+          </div>
+          <div class="icons">
+            <a href="https://api.whatsapp.com/send?phone=5511981077083&text=Ol%C3%A1%20em%20que%20posso%20ajudar"
+              target="_blank"><i class="bi bi-whatsapp btn"></i></a>
+            <a href="https://www.instagram.com/lucass17071996?igsh=OTl0bDZ2dTAxMGdm" target="_blank"><i
+                class="bi bi-instagram btn"></i></a>
+            <a href="https://www.linkedin.com/in/lucas-santos-soares/" target="_blank"><i
+                class="bi bi-linkedin btn"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </footer>
   <script src="js/scripts.js"></script>
 </body>
+
 </html>
