--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <h3 class="main-title">Sobre a hDC Agency</h3>
             </div>
             <div class="col-md-6">
-              <img class="img-fluid" src="img/agencia.jpg" alt="Agência HDC">
+              <img class="img-fluid mx-auto" src="img/agencia.jpg" alt="Agência HDC">
             </div>
             <div class="col-md-6">
               <h3 class="about-title">Uma agência que pensa no futuro</h3>
